--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="style.css" />
-    <title>stm_algoviz : Stable Matching Algorithm Visualizer</title>
+    <title>Stable Matching Algorithm Visualizer</title>
   </head>
 
   <body>
